--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "element-ui": "^2.15.6",
+    "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.1",
     "vis": "^4.21.0-EOL",
     "vue": "^2.6.11",
