--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "element-ui": "^2.15.6",
+    "exceljs": "^4.3.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.1",
+    "sheetjs": "^2.0.0",
     "vis": "^4.21.0-EOL",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-video-player": "^5.0.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
