--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "echarts": "^5.3.2",
     "element-ui": "^2.15.6",
     "exceljs": "^4.3.0",
     "font-awesome": "^4.7.0",
@@ -34,5 +35,10 @@
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^8.7.1",
     "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "rules": {
+      "vue/no-unused-components": "off"
+    }
   }
 }
